# CryptoLake

./: .env.example  .gitignore  Dockerfile  Makefile  cryptolake-fases-1-2.md  cryptolake-fases-3-4.md  cryptolake-fases-5-6.md  cryptolake-guia.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  data-quality.yml
cryptolake.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docker/airflow/: Dockerfile
docker/api/: Dockerfile
docker/spark/: Dockerfile  spark-defaults.conf
scripts/: health_check.py
src/: fix_protobuf.py
src/config/: logging.py  settings.py
src/ingestion/batch/: base_extractor.py  coingecko_extractor.py  fear_greed_extractor.py
src/ingestion/streaming/: binance_producer.py
src/orchestration/dags/: dag_full_pipeline.py
src/processing/batch/: api_to_bronze.py  bronze_to_silver.py  init_namespaces.py  silver_to_gold.py
src/quality/: run_quality_checks.py  validators.py
src/serving/api/: database.py
src/serving/api/routes/: analytics.py
src/serving/dashboard/: app.py
src/transformation/: check_all.py  check_bronze.py  check_silver.py  create_default_ns.py
src/transformation/dbt_cryptolake/: dbt_project.yml  profiles.yml
tests/unit/: test_schemas.py  test_validators.py
