# ============================================================
# CryptoLake — pyproject.toml
# ============================================================
# Metadata del proyecto y dependencias para desarrollo local.
#
# Uso:
#   pip install -e ".[dev]"   → instala src/ como paquete editable + herramientas dev
#   pip install -e .          → solo dependencias de runtime
# ============================================================

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptolake"
version = "1.0.0"
description = "CryptoLake — Lakehouse de criptomonedas con Apache Spark, Iceberg y dbt"
requires-python = ">=3.11"
license = {text = "MIT"}

# Dependencias mínimas para que los imports de src/ funcionen
# (PySpark y dbt solo se usan dentro de Docker, no se instalan aquí)
dependencies = [
    "pydantic>=2.5,<3",
    "pydantic-settings>=2.1,<3",
    "requests>=2.31,<3",
    "structlog>=24.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

# ── Setuptools: descubrir paquetes en src/ ──────────────────
[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "tests*"]

# ── Ruff ────────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",   # line too long (lo maneja el formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

# ── Pytest ──────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

# ── MyPy ────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
